Update ActionEncoder.java